kubernetes/minio/applications/quay/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-quay
  namespace: minio
  labels:
    app.kubernetes.io/instance: minio
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: minio-quay
  template:
    metadata:
      name: minio-quay
      labels:
        app: minio-quay
      annotations:
        enable.version-checker.io/minio-quay: "true"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      serviceAccountName: minio-sa
      automountServiceAccountToken: false
      containers:
        - name: minio-quay
          image: "quay.io/minio/minio:RELEASE.2023-03-24T21-41-23Z"
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio server /export -S /etc/minio/certs/ --address :9000 --console-address :9001"
          volumeMounts:
            - name: minio-user
              mountPath: "/tmp/credentials"
              readOnly: true
            - name: export
              mountPath: /export
          ports:
            - name: http
              containerPort: 9000
            - name: http-console
              containerPort: 9001
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 1Gi
      volumes:
        - name: export
          persistentVolumeClaim:
            claimName: minio-quay
        - name: minio-user
          secret:
            secretName: minio
