kubernetes/minio/applications/quay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-quay-console
  namespace: minio
  labels:
    app.kubernetes.io/instance: minio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: minio-quay
---
apiVersion: v1
kind: Service
metadata:
  name: minio-quay
  namespace: minio
  labels:
    app.kubernetes.io/instance: minio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio-quay
