kubernetes/minio/applications/quay/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: minio
  name: minio-quay
  namespace: minio
spec:
  host: minio-quay.apps.okd.<path:secret/data/homelab/domain#url>
  port:
    targetPort: http
  to:
    kind: Service
    name: minio-quay
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: minio
  name: minio-quay-console
  namespace: minio
spec:
  host: minio-quay-console.apps.okd.<path:secret/data/homelab/domain#url>
  port:
    targetPort: http
  to:
    kind: Service
    name: minio-quay-console
