kubernetes/minio/applications/quay/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress-minio-quay
  namespace: minio
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: minio
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: minio-quay
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
